sample-haproxy-integration/templates/sample-apps/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx-service
  labels:
    waas.radware.com/sample: nginx
spec:
  selector:
    app: sample-nginx-container
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
